# ros-bridge

./: .gitignore  README.md
can_bridge_node/: CMakeLists.txt  package.xml  readme.md
can_bridge_node/config/: usbcan.yaml
can_bridge_node/inc/: can_bridge_node.h  cxkj_canalyst2_wrapper.h  itekon_x200_wrapper.h  logging_utils.h  usbcan_base.h  usbcan_wrapper.h
can_bridge_node/launch/: can_bridge_node.launch.py
can_bridge_node/src/: can_bridge_node.cc
can_bridge_node/tools/: build_can_bridge.sh  run_can_bridge.sh  test_can_bridge.sh
can_bridge_node/usbcan/controlcan/: Makefile  hello_cpp  main.cpp
can_bridge_node/usbcan/itekon_canfd_linux/: CMakeLists.txt  README.md  canfd_test.c
can_bridge_node/usbcan/itekon_canfd_linux/lib/: CMakeLists.txt  iTekCANFD.c  iTekCANFD.h
carla_common/src/carla_common/: transforms.py
carla_manual_control/: CMakeLists.txt  setup.py
carla_manual_control/data/: carla_parking_traj_lincoln_0707.json  carla_parking_traj_microlino_0517.json  carla_parking_traj_microlino_0519.json
carla_manual_control/launch/: carla_manual_control.launch.py
carla_manual_control/src/carla_manual_control/: carla_manual_control.py  pseudo_planning_control.py
carla_patrol_woros/: README.md  patrol_in_town04.py
carla_patrol_woros/helper/: carla_utils.py  display_manager.py  generate_traffic.py  hud_wrapper.py  scene_wrapper.py  sensor_wrapper.py  vehicle_gallery.py  visualize_multiple_sensors.py  visualize_single_sensors.py
carla_patrol_woros/ipm/: calc_ipm.py  readme.md
carla_patrol_woros/utils/: lidar_ch128x1_decoder.py  lidar_ch128x1_encoder.py  plogging.py  radar_oculii_eagle_decoder.py  radar_oculii_eagle_encoder.py  svl2carla.py  udpwrapper.py
carla_ros_bridge/launch/: carla_ros_bridge_apa.launch  carla_ros_bridge_parking.launch.py  carla_ros_bridge_viwo.launch
carla_ros_bridge/src/carla_ros_bridge/: actor.py  bridge.py  odom_sensor.py
carla_spawn_parking/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_spawn_parking/config/: objects.json  objects_lincoln.json  objects_lite.json  objects_microlino.json  objects_microlino_pcie.json
carla_spawn_parking/launch/: carla_example_ego_vehicle.launch  carla_example_ego_vehicle.launch.py  carla_spawn_microlino.launch  carla_spawn_parking.launch  carla_spawn_parking.launch.py  carla_spawn_parking_pcie.launch.py  set_initial_pose.launch  set_initial_pose.launch.py
carla_spawn_parking/src/carla_spawn_parking/: carla_spawn_parking.py
data/: carla_parking_traj_051801.json
pcie_bridge_node/: CMakeLists.txt  package.xml  readme.md
pcie_bridge_node/assets/: 1920_1080.uyvy
pcie_bridge_node/aumo_s2_sdk/: controlplay.h
pcie_bridge_node/config/: aumo_s2.yaml
pcie_bridge_node/inc/: aumo_device.h  cv_param_loader.h  logging_utils.h  pcie_bridge_node.h
pcie_bridge_node/launch/: pcie_bridge_node.launch.py  test_canfd.launch.py
pcie_bridge_node/src/: pcie_bridge_node.cc  test_canfd.cc  test_raw12.cc  test_video_inject.cc
pcie_bridge_node/tools/: build_pcie_bridge.sh  run_pcie_bridge.sh  test_canfd.sh  test_raw12.sh  test_video_inject.sh
tools/: build_parking.sh  run_parking.sh  run_parking_pcie.sh
